--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
             overflow: hidden;
             background-color: #f4f4f4;
             font-family: Arial, sans-serif;
+			padding: 0;
         }
         section {
-            display: none;
+            display: flex;
             width: 100%;
             height: 100%;
             flex-direction: column;
@@ -37,8 +38,8 @@
             margin-bottom: 20px;
         }
         img {
-            max-width: 90%;
-            max-height: 60%;
+            width: 90%;  /* Prova una larghezza diversa per vedere l'effetto */
+			height: auto;
             border-radius: 10px;
             margin-bottom: 20px;
         }
