--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
             padding: 0;
         }
 
+
+/* height fissa l'altezza di un elemento, mentre max-height specifica un limite massimo oltre il quale l'elemento non può crescere */
         img {
             max-width: 97%; /* Riduzione della dimensione massima delle immagini */
-            max-height: 97%;
+            height: 100%    /*  prima era:   max-height:-97%;  */
             object-fit: contain; /* Mantiene proporzioni */
             border-radius: 10px; /* Angoli arrotondati */
         }
@@ -150,9 +152,9 @@
     <!-- Barra superiore -->
     <div class="top-bar" role="navigation"> <!-- Modifica: Aggiunto ruolo per accessibilità -->
         <img src="logo.png" alt="Logo"> <!-- Aggiunta del logo -->
-        <span>Prima il Veneto.</span> <!-- Slogan o titolo -->
-        <a href="https://www.youtube.com/@primailveneto.5323" target="_blank">YouTube</a>
-        <a href="https://www.facebook.com/primailvenetopunto" target="_blank">Facebook</a>
+        <span>Famiglia Encicliati</span> <!-- Slogan o titolo -->
+        <a href="https://famienc.github.io/gruppo1/" target="_blank">gruppo1</a>
+        <a href="https://famienc.github.io/gruppo2/" target="_blank">gruppo2</a>
         <a href="https://www.instagram.com/prima_il_veneto/" target="_blank">Instagram</a>
     </div>
 
