--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
     <!-- Barra superiore -->
     <div class="top-bar" role="navigation"> <!-- Modifica: Aggiunto ruolo per accessibilità -->
         <img src="logo.png" alt="Logo"> <!-- Aggiunta del logo -->
-        <span>Famiglia Encicliati</span> <!-- Slogan o titolo -->
-        <a href="https://famienc.github.io/gruppo1/" target="_blank">gruppo1</a>
-        <a href="https://famienc.github.io/gruppo2/" target="_blank">gruppo2</a>
+        <span>Prima il Veneto.</span> <!-- Slogan o titolo -->
+        <a href="https://www.youtube.com/@primailveneto.5323" target="_blank">YouTube</a>
+        <a href="https://www.facebook.com/primailvenetopunto" target="_blank">Facebook</a>
         <a href="https://www.instagram.com/prima_il_veneto/" target="_blank">Instagram</a>
     </div>
 
